--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: flask-app
   namespace: demo
+  labels:
+    app: flask-app
 spec:
   replicas: 2
   selector:
@@ -13,14 +15,15 @@ spec:
       labels:
         app: flask-app
     spec:
-      serviceAccountName: jenkins-deployer
       containers:
         - name: flask-app
-          image: DOCKER_USER/flask-cicd:latest
+          image: loksjain25/flask-cicd:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
           env:
-            - name: APP_VERSION
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.annotations['app/version']
+            - name: FLASK_ENV
+              value: production
+            - name: PORT
+              value: "8080"
+      restartPolicy: Always
