--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -4,10 +4,10 @@ metadata:
   name: flask-service
   namespace: demo
 spec:
-  type: NodePort
   selector:
     app: flask-app
+  type: NodePort
   ports:
-    - name: http
-      port: 80
+    - port: 80
       targetPort: 8080
+      nodePort: 30550
