--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,8 +1,12 @@
+# Use lightweight Python image
 FROM python:3.12-slim
+
 WORKDIR /app
+
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-COPY app.py .
-ENV PORT=8080
-EXPOSE 8080
+RUN pip install -r requirements.txt
+
+COPY . .
+
+EXPOSE 5000
 CMD ["python", "app.py"]
