--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,12 +1,10 @@
-# Use lightweight Python image
 FROM python:3.12-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY app/requirements.txt .
 RUN pip install -r requirements.txt
 
-COPY . .
-
+COPY app/ .
 EXPOSE 5000
 CMD ["python", "app.py"]
